Cria os campos de latitude e longitude
cria 2 campos double para latitude e longitude

--- a/src/main/resources/templates/area_nova.html
+++ b/src/main/resources/templates/area_nova.html
@@ -57,16 +57,16 @@
 					<textarea th:field="*{desc_especialidades}" class="form-control" placeholder="Descrição Especialidades"></textarea>
 					<small class="form-text text-muted">Informe ma descrição de especialidades para a Área</small>
 				</div>
-<!-- 				<div class="form-group"> -->
-<!-- 					<label for="lat">Latitude</label> -->
-<!-- 					<input th:field="*{lat}" class="form-control" placeholder="Latitude"/> -->
-<!-- 					<small class="form-text text-muted">Informe a latitude</small> -->
-<!-- 				</div> -->
-<!-- 				<div class="form-group"> -->
-<!-- 					<label for="lat">Longitude</label> -->
-<!-- 					<input th:field="*{lng}" class="form-control" placeholder="Longitude"/> -->
-<!-- 					<small class="form-text text-muted">Informe a longitude</small> -->
-<!-- 				</div> -->
+				<div class="form-group">
+					<label for="latitude">Latitude</label>
+					<input th:field="*{latitude}" class="form-control" placeholder="Latitude"/>
+					<small class="form-text text-muted">Informe a latitude</small>
+				</div>
+				<div class="form-group">
+					<label for="longitude">Longitude</label>
+					<input th:field="*{longitude}" class="form-control" placeholder="Longitude"/>
+					<small class="form-text text-muted">Informe a longitude</small>
+				</div>
 <!-- 				<div class="form-group"> -->
 <!-- 					<label for="geom">Geom</label> -->
 <!-- 					<input th:field="*{geom}" class="form-control" placeholder="Localização"/> -->
