Valide os campos do formulario de cadastro da Area

--- a/src/main/resources/templates/area_nova.html
+++ b/src/main/resources/templates/area_nova.html
@@ -44,28 +44,49 @@
 				</div>
 				<div class="form-group">
 					<label for="telefone">Telefone</label>
-					<input th:field="*{telefone}" class="form-control" placeholder="Telefone"/>
+					<input th:field="*{telefone}" th:errorclass="is-invalid" class="form-control" placeholder="Telefone" type="tel" id="telefone" name="telefone" pattern="([0-9]{2})[0-9]{5}-[0-9]{4}" />
 					<small class="form-text text-muted">Informe o Telefone da Área</small>
+					<div class="invalid-feedback" th:errors="*{telefone}">
+						Erro
+					</div>
 				</div>
 				<div class="form-group">
 					<label for="desc_referenciada">Descrição Referenciada</label>
-					<textarea th:field="*{desc_referenciada}" class="form-control" placeholder="Descrição Referenciada"></textarea>
+					<textarea th:field="*{desc_referenciada}" th:errorclass="is-invalid" class="form-control" placeholder="Descrição Referenciada"></textarea>
 					<small class="form-text text-muted">Informe uma descrição referenciada para a Área</small>
+					<div class="invalid-feedback" th:errors="*{desc_referenciada}">
+						Erro
+					</div>
 				</div>
 				<div class="form-group">
 					<label for="desc_especialidades">Descrição Especialidades</label>
-					<textarea th:field="*{desc_especialidades}" class="form-control" placeholder="Descrição Especialidades"></textarea>
+					<textarea th:field="*{desc_especialidades}" th:errorclass="is-invalid" class="form-control" placeholder="Descrição Especialidades"></textarea>
 					<small class="form-text text-muted">Informe ma descrição de especialidades para a Área</small>
+					<div class="invalid-feedback" th:errors="*{desc_especialidades}">
+						Erro
+					</div>
 				</div>
-				<div class="form-group">
-					<label for="latitude">Latitude</label>
-					<input th:field="*{latitude}" class="form-control" placeholder="Latitude"/>
-					<small class="form-text text-muted">Informe a latitude</small>
-				</div>
-				<div class="form-group">
-					<label for="longitude">Longitude</label>
-					<input th:field="*{longitude}" class="form-control" placeholder="Longitude"/>
-					<small class="form-text text-muted">Informe a longitude</small>
+				
+				<div>
+					<div>mapa</div>
+					<div>
+						<div class="form-group">
+							<label for="latitude">Latitude</label>
+							<input th:field="*{latitude}" th:errorclass="is-invalid" class="form-control" placeholder="Latitude"/>
+							<small class="form-text text-muted">Informe a latitude</small>
+							<div class="invalid-feedback" th:errors="*{latitude}">
+								Erro
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="longitude">Longitude</label>
+							<input th:field="*{longitude}" th:errorclass="is-invalid" class="form-control" placeholder="Longitude"/>
+							<small class="form-text text-muted">Informe a longitude</small>
+							 <div class="invalid-feedback" th:errors="*{longitude}">
+								Erro
+							</div>
+						</div>
+					</div>
 				</div>
 <!-- 				<div class="form-group"> -->
 <!-- 					<label for="geom">Geom</label> -->
