--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,6 +1,6 @@
 <nav th:fragment="menu" class="navbar navbar-expand navbar-light bg-white mb-0 d-flex justify-content-between">
 	<div class="navbar-nav">
-		<a class="navbar-brand" href="/index">
+		<a class="navbar-item" href="/index">
 			<img src="/img/Treitdt.gif" class="navbar-brand" height="60%"
 			alt="TreITDT Logomarca">
 		</a>
