--- a/src/main/resources/templates/area_nova.html
+++ b/src/main/resources/templates/area_nova.html
@@ -12,6 +12,21 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	
+	<!-- Leaflet's CSS -->
+
+<link rel="stylesheet"
+	href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+	integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+	crossorigin="" />
+
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+	integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+	crossorigin=""></script>
+
+
+<link href="../css/style.css" rel="stylesheet">
+	
 </head>
 
 <body>
@@ -67,12 +82,14 @@
 					</div>
 				</div>
 				
+				
+				
 				<div>
-					<div>mapa</div>
+					 
 					<div>
 						<div class="form-group">
 							<label for="latitude">Latitude</label>
-							<input th:field="*{latitude}" th:errorclass="is-invalid" class="form-control" placeholder="Latitude"/>
+							<input th:field="*{latitude}" th:errorclass="is-invalid" class="form-control" id="lat" placeholder="Latitude"/>
 							<small class="form-text text-muted">Informe a latitude</small>
 							<div class="invalid-feedback" th:errors="*{latitude}">
 								Erro
@@ -80,7 +97,7 @@
 						</div>
 						<div class="form-group">
 							<label for="longitude">Longitude</label>
-							<input th:field="*{longitude}" th:errorclass="is-invalid" class="form-control" placeholder="Longitude"/>
+							<input th:field="*{longitude}" th:errorclass="is-invalid" class="form-control" id="lng" placeholder="Longitude"/>
 							<small class="form-text text-muted">Informe a longitude</small>
 							 <div class="invalid-feedback" th:errors="*{longitude}">
 								Erro
@@ -97,8 +114,15 @@
 				<button class="btn btn-primary" type="submit">Adicionar</button>
 				
 			</form>
+			<div id="map">mapa </div>
+			
 		</div>
+		<script src="../js/jquery-3.6.0.min.js"></script>
+	<script src="../js/mapa.js"></script>
 	</div>
+	
+	
+		
 </body>
 </html>
 
